fixed nav bar on smaller screen

--- a/css/index.css
+++ b/css/index.css
@@ -28,34 +28,34 @@ main {
 }
 
 nav {
-  align-items: center;
-  display: flex;
-  height: 54px;
+  height: 75px;
   background-color: #eeeeee;
 }
 
-.flex-container {
-  position: absolute;
-  left: 80px;
-}
-
-.flex-container a {
+nav a {
   text-decoration: none;
+  margin-left: 100px;
 }
 
-.flex-container img {
+a img {
   width: 75px;
   height: 75px;
 }
 
-.flex-container span {
-  color: var(--black);
-  font-size: 25px;
+a span {
+  color: #ffd700;
+  font-size: 30px;
   font-weight: 900;
 }
 
-.flex-container span:hover {
+a span:hover {
   color: #ffd700;
+}
+
+@media (max-width: 480px) {
+  nav a {
+    margin: auto;
+  }
 }
 
 .header {
@@ -459,6 +459,7 @@ table tr:last-child td:last-child {
   .image-section3 {
     border-radius: 10px !important;
     width: 100%;
+    height: 350px;
     margin-left: 20px;
   }
   .about-box .text-section {
